--- a/project-4.html
+++ b/project-4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Case Study | D'Classics Books</title>
+    <title>D'Classics Books</title>
     <meta name="description" content="A case study of the D'Classics Books mobile application." />
 
     <link rel="stylesheet" href="css/style.css" />
