--- a/project-2.html
+++ b/project-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Case Study | GlowGlow</title>
+    <title>GlowGlow</title>
     <meta name="description" content="A case study of the GlowGlow AI Skincare Recommendation System." />
 
     <link rel="stylesheet" href="css/style.css" />
