--- a/project-3.html
+++ b/project-3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Case Study | Image Colorization Research</title>
+    <title>Image Colorization Research</title>
     <meta name="description" content="A case study of a research project on AI-driven image colorization using GAN and U-Net." />
 
     <link rel="stylesheet" href="css/style.css" />
