--- a/project-2.html
+++ b/project-2.html
@@ -74,7 +74,7 @@
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="DRIVE_LINK_ANDA" target="_blank"> Resume </a>
+              <a href="https://drive.google.com/file/d/1W20WjcA2_HN4LcA2nt5Ov1ns9HIvjOfv/view?usp=sharing" target="_blank"> Resume </a>
             </li>
           </ul>
         </div>
