--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <a href="./index.html#projects"> Projects </a>
             </li>
             <li class="header__sm-menu-link">
-                <a href="DRIVE_LINK_ANDA" target="_blank"> Resume </a>
+                <a href="https://drive.google.com/file/d/1W20WjcA2_HN4LcA2nt5Ov1ns9HIvjOfv/view?usp=sharing"> Resume </a>
             </li>
           </ul>
         </div>
