--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="https://www.linkedin.com/in/emily-wilkinson-2a0522364/" target="_blank" rel="noopener noreferrer" class="home-hero__social-icon-link">
+          <a href="https://www.linkedin.com/in/wilkinsonemily/" target="_blank" rel="noopener noreferrer" class="home-hero__social-icon-link">
             <img
               src="./assets/png/linkedin-ico.png"
               alt="icon"
@@ -291,7 +291,7 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/emily-wilkinson-2a0522364/">
+              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/wilkinsonemily/">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
