--- a/project-1.html
+++ b/project-1.html
@@ -205,7 +205,7 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/emily-wilkinson-2a0522364/">
+              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/wilkinsonemily/">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
