--- a/project-3.html
+++ b/project-3.html
@@ -43,7 +43,7 @@
               </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="https://drive.google.com/file/d/1W20WjcA2_HN4LcA2nt5Ov1ns9HIvjOfv/view?usp=sharing" class="header__link" target="_blank"> Resume </a>
+              <a href="https://drive.google.com/file/d/1oZQ5vcVqSaBo0iW5kRkfKugKJqvLdToK/view?usp=sharing" class="header__link" target="_blank"> Resume </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
@@ -73,12 +73,11 @@
               <a href="./index.html#projects"> Projects </a>
             </li>
             <li class="header__sm-menu-link">
-              <a href="DRIVE_LINK_ANDA" target="_blank"> Resume </a>
+              <a href="https://drive.google.com/file/d/1oZQ5vcVqSaBo0iW5kRkfKugKJqvLdToK/view?usp=sharing" target="_blank"> Resume </a>
             </li>
           </ul>
         </div>
       </div>
-    </header>
 
     <section class="case-study-hero">
         <div class="main-container case-study-hero__content">
