--- a/project-6.html
+++ b/project-6.html
@@ -47,7 +47,7 @@
             </li>
             <li class="header__link-wrapper">
               <a
-                href="https://drive.google.com/file/d/1W20WjcA2_HN4LcA2nt5Ov1ns9HIvjOfv/view?usp=sharing"
+                href="https://drive.google.com/file/d/1oZQ5vcVqSaBo0iW5kRkfKugKJqvLdToK/view?usp=sharing"
                 class="header__link"
                 target="_blank"
                 rel="noreferrer"
@@ -85,13 +85,7 @@
               <a href="./index.html#projects"> Projects </a>
             </li>
             <li class="header__sm-menu-link">
-              <a
-                href="https://drive.google.com/file/d/1W20WjcA2_HN4LcA2nt5Ov1ns9HIvjOfv/view?usp=sharing"
-                target="_blank"
-                rel="noreferrer"
-              >
-                Resume
-              </a>
+              <a href="https://drive.google.com/file/d/1oZQ5vcVqSaBo0iW5kRkfKugKJqvLdToK/view?usp=sharing" target="_blank"> Resume </a>
             </li>
           </ul>
         </div>
