--- a/project-5.html
+++ b/project-5.html
@@ -46,14 +46,7 @@
               <a href="./index.html#projects" class="header__link"> Projects </a>
             </li>
             <li class="header__link-wrapper">
-              <a
-                href="https://drive.google.com/file/d/1oZQ5vcVqSaBo0iW5kRkfKugKJqvLdToK/view?usp=sharing"
-                class="header__link"
-                target="_blank"
-                rel="noreferrer"
-              >
-                Resume
-              </a>
+              <a href="https://drive.google.com/file/d/11YE1ybjmkH14bZ0BsHz_vCXIczbE_AAX/view?usp=sharing" class="header__link" target="_blank"> Resume </a>
             </li>
           </ul>
 
@@ -85,7 +78,7 @@
               <a href="./index.html#projects"> Projects </a>
             </li>
             <li class="header__sm-menu-link">
-              <a href="https://drive.google.com/file/d/1oZQ5vcVqSaBo0iW5kRkfKugKJqvLdToK/view?usp=sharing" target="_blank"> Resume </a>
+              <a href="https://drive.google.com/file/d/11YE1ybjmkH14bZ0BsHz_vCXIczbE_AAX/view?usp=sharing" class="header__link" target="_blank"> Resume </a>
             </li>
           </ul>
         </div>
